// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handler: mobilemail, client: apad 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "apad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "apad",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: mobilemail, client: aphone 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "android",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "android",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: mobilemail, client: ipad 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "ipad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "ipad",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: mobilemail, client: iphone 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: mobilepayment, client: apad 1`] = `
Object {
  "uaasHandler": "mobilepayment",
  "uaasParams": Object {
    "mobilePlatform": "apad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "apad",
        "Service": "mobilepayment",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mobilepayment",
}
`;

exports[`handler: mobilepayment, client: aphone 1`] = `
Object {
  "uaasHandler": "mobilepayment",
  "uaasParams": Object {
    "mobilePlatform": "android",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "android",
        "Service": "mobilepayment",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mobilepayment",
}
`;

exports[`handler: mobilepayment, client: ipad 1`] = `
Object {
  "uaasHandler": "mobilepayment",
  "uaasParams": Object {
    "mobilePlatform": "ipad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "ipad",
        "Service": "mobilepayment",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mobilepayment",
}
`;

exports[`handler: mobilepayment, client: iphone 1`] = `
Object {
  "uaasHandler": "mobilepayment",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mobilepayment",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mobilepayment",
}
`;

exports[`handler: undefined, client: apad 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "apad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "apad",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: undefined, client: aphone 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "android",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "android",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: undefined, client: ipad 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "ipad",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "ipad",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`handler: undefined, client: iphone 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`with device-id 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "fuid": "827ccb0eea8a706c",
    "mobilePlatform": "iphone",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Fuid": "827ccb0eea8a706c",
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`with strange uuid 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
    "uuid": "deadbeef",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": "deadbeef",
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`with strange uuid 2`] = `
Array [
  Array [
    "v2_flags_invalid_uid",
  ],
]
`;

exports[`with test-id 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
    "test-id": "12345",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Experiments": Object {
        "AddExperiments": Array [
          "12345",
        ],
      },
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`with uuid 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
    "uuid": "deadbeef",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": "deadbeef",
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;

exports[`without params 1`] = `
Object {
  "uaasHandler": "MOBMAIL",
  "uaasParams": Object {
    "mobilePlatform": "iphone",
  },
  "uaasRequest": Object {
    "ConfigType": "PRODUCTION",
    "UsersplitRequestParams": Object {
      "Ip": "FAKE_IP",
      "Location": "FAKE_LOCATION",
      "Restrictions": Object {
        "MobilePlatform": "iphone",
        "Service": "mail-mobile-apps",
      },
      "SplitIds": Object {
        "Uuid": undefined,
      },
      "Timestamp": 1580554500751,
    },
  },
  "uaasService": "mail-mobile-apps",
}
`;
